kubernetes/base/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: webapi
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
  labels:
    app.kubernetes.io/name: ingress
    app.kubernetes.io/instance: webapi
    app.kubernetes.io/part-of: webapi
    hostname: webapi.api.e-hub.io
spec:
  rules:
  - host: $(HOST)
    http:
      paths:
      - backend:
          serviceName: webapi
          servicePort: 80
  tls:
  - hosts:
    - $(HOST)
    secretName: webapi-ingress-tls-secret
